package engine.observer;

public enum TipoEvento {
    SCELTA_EFFETTUATA,
    OGGETTO_AGGIUNTO,
    OGGETTO_RIMOSSO,
    PUZZLE_RISOLTO,
    ATTO_CAMBIATO
}
